Bug 139968 - legacy pie with rotation and slant has wrong sector angles after horizontal flip
Summary: legacy pie with rotation and slant has wrong sector angles after horizontal flip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: low normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords:
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2021-01-28 12:55 UTC by Regina Henschel
Modified: 2026-02-04 20:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to test horizontal mirror on pie with slant and rotation (9.10 KB, application/vnd.oasis.opendocument.graphics)
2021-01-28 12:55 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-01-28 12:55:47 UTC
Created attachment 169235 [details]
File to test horizontal mirror on pie with slant and rotation

Open attached file. It has a blue and a green legacy pie with slant 60deg and rotation 15deg. Select on of them and mirror it horizontally.
Expected: The shapes look equal, but only mirrored.
Actual: The sector has changed.

This happens only, if the pie has rotation and slant at the same time. A pie with either slant or rotation does not show this error.

I set it to low priority, because this is a special case in a legacy shape.
Comment 1 Buovjaga 2022-01-27 12:47:15 UTC
Reproduced.

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: ba0100be03c6bbc5ae10201bae340b3f7b7c4500
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 27 January 2022
Comment 2 QA Administrators 2024-01-28 03:14:08 UTC Comment hidden (obsolete)
Comment 3 Regina Henschel 2024-01-28 12:57:53 UTC
It is still wrong in Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4871de96cb5e31e5ab06cf97e02e09e0e04a4de8
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 4 QA Administrators 2026-01-29 10:21:30 UTC Comment hidden (obsolete)
Comment 5 Regina Henschel 2026-01-29 10:46:37 UTC
The error still happens in Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2026-02-04 14:04:42 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe00ea424ebda161badc3d7ff57957077e7a457a

tdf#139968 first shear then rotate point of arc

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Regina Henschel 2026-02-04 15:03:51 UTC
The arrow heads are not as one would expect by flipping. That is reported in bug 170601.

The angles are correct now.
Comment 8 Commit Notification 2026-02-04 20:29:39 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/6e10c1d682c4fba2da642ce3a76fc98423cb159b

tdf#139968 first shear then rotate point of arc

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.