tdf#139968 first shear then rotate point of arc

All internal calculation for transformation use the order resize, shear,
rotate, translate. Thus the transformation of the points determining
the angles of non-full SdrCircObj need to use that order too.

Change-Id: If05310c64813bcffa410a328cf831b3f0b4c07e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198630
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Tested-by: Jenkins
(cherry picked from commit fe00ea424ebda161badc3d7ff57957077e7a457a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198699
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>